force-app/src/objects/OrderApi__Badge_Type__c.object
<CustomObject>
    <description>Configure Badge Types to assign to Contacts to allow greater control and flexibility around pricing and content accessibility.</description>
    <fields>
        <fullName>OrderApi__Description__c</fullName>
        <description>Optional description of the Badge Type</description>
        <inlineHelpText>Optional description of the Badge Type</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Enable_Badge_Flow_down__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked and when the badge is assigned to an account, all contacts of that account, child accounts, and child account&apos;s contacts will inherit the benefits. Limited to only one level of child accounts.</description>
        <inlineHelpText>When checked and when the badge is assigned to an account, all contacts of that account, child accounts, and child account&apos;s contacts will inherit the benefits. Limited to only one level of child accounts.</inlineHelpText>
        <label>Enable Badge Flow-down</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Engagement_Score__c</fullName>
        <description>The engagement score that is to be assigned to the entity&apos;s badge record.</description>
        <inlineHelpText>The engagement score that is to be assigned to the entity&apos;s badge record.</inlineHelpText>
        <label>Engagement Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Icon_Location__c</fullName>
        <description>** System Calculated Override ** Override the default Badge Type icon with a custom image to distinguish the Badge Type from other Badge Types.</description>
        <inlineHelpText>** System Calculated Override ** Override the default Badge Type icon with a custom image to distinguish the Badge Type from other Badge Types.</inlineHelpText>
        <label>Icon Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Icon__c</fullName>
        <description>** System Calculated ** Badge Image Icon -- displayed in most Contact Badge list views.</description>
        <formula>IMAGE(IF(ISBLANK(OrderApi__Icon_Location__c),&apos;https://s3.us-east-1.amazonaws.com/fonteva-customer-media/00D1U000000FLVyUAO/WcRwRzNr_placeholder_svg&apos;,OrderApi__Image_Location__c), Name,12,12)</formula>
        <inlineHelpText>** System Calculated ** Badge Image Icon -- displayed in most Contact Badge list views.</inlineHelpText>
        <label>Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Image_Location__c</fullName>
        <description>Distinguish the Badge Type from other Badge Types by providing the URL to a securely hosted image to use as the Badge Type Image.</description>
        <inlineHelpText>Distinguish the Badge Type from other Badge Types by providing the URL to a securely hosted image to use as the Badge Type Image.</inlineHelpText>
        <label>Image Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Image__c</fullName>
        <description>** System Calculated ** Preview the Badge Image configured for the Badge Type.</description>
        <formula>IMAGE(IF(ISBLANK(OrderApi__Image_Location__c),&apos;https://s3.us-east-1.amazonaws.com/fonteva-customer-media/00D1U000000FLVyUAO/WcRwRzNr_placeholder_svg&apos;,OrderApi__Image_Location__c),  Name)</formula>
        <inlineHelpText>** System Calculated ** Preview the Badge Image configured for the Badge Type.</inlineHelpText>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the Badge Type is active and available for assignment to a Contact</description>
        <inlineHelpText>When checked the Badge Type is active and available for assignment to a Contact</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Contacts assigned Badge related to the Badge Type will have the option to display the Badge on their Community Profile (valid only if Fonteva Communities is enabled for your environment - contact your administrator if you have any questions)</description>
        <inlineHelpText>When checked, Contacts assigned Badge related to the Badge Type will have the option to display the Badge on their Community Profile (valid only if Fonteva Communities is enabled for your environment - contact your administrator if you have any questions)</inlineHelpText>
        <label>Is Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Public_Description__c</fullName>
        <description>The contents of this field will publish to the community portal.</description>
        <inlineHelpText>The contents of this field will publish to the community portal.</inlineHelpText>
        <label>Public Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OrderApi__Short_Description__c</fullName>
        <description>Optional (but highly recommended) short description used on reports and to provide context to end users looking at a list of Contacts assigned to various badges.</description>
        <inlineHelpText>Optional (but highly recommended) short description used on reports and to provide context to end users looking at a list of Contacts assigned to various badges.</inlineHelpText>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Badge Type</label>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <columns>NAME</columns>
        <columns>OrderApi__Icon__c</columns>
        <columns>OrderApi__Is_Published__c</columns>
        <columns>OrderApi__Is_Active__c</columns>
        <columns>OrderApi__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Badge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Badge Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>